src/objects/OV_Report__c.object
<CustomObject>
    <description>OneView - Report Tile: Report Detail Page to create a One View  Report Tile</description>
    <fields>
        <fullName>Business_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Business Owner for the Report</description>
        <inlineHelpText>OneView Report Business Owner</inlineHelpText>
        <label>Business Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OV_BusinessOwnerReports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Category</label>
        <referenceTo>OV_Category__c</referenceTo>
        <relationshipName>OV_CategoryReports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Chatter_Delete_Message__c</fullName>
        <formula>&apos;Report has been deleted&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Chatter Delete Message</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chatter_Message__c</fullName>
        <formula>&apos;New version has been uploaded&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Chatter Message</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chatter_Update_Message__c</fullName>
        <formula>&apos;New version has been uploaded&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Chatter Update Message</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Colour__c</fullName>
        <defaultValue>&quot;#0000ff&quot;</defaultValue>
        <label>Colour</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Colour_ltng__c</fullName>
        <formula>IF(OR( ISNULL( Colour__c ) , ISBLANK(Colour__c) ) ,&apos;#2a94d6&apos;,  Colour__c )</formula>
        <label>Colour Lightning</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContentDocumentDesktop__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Salesforce CRM Content associated with Desktop</description>
        <inlineHelpText>ContentDocument__c</inlineHelpText>
        <label>Content Desktop</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ContentDocumentMobile__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Content for Mobile</description>
        <inlineHelpText>Content for Mobile</inlineHelpText>
        <label>Content Mobile</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ContentDocumentTablet__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Content for Tablet</description>
        <inlineHelpText>Content for Tablet</inlineHelpText>
        <label>Content Tablet</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Desktop_Content_Proxy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Desktop Content Proxy</label>
        <referenceTo>OV_ContentProxy__c</referenceTo>
        <relationshipName>OV_DesktopContentProxy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Desktop_Content_del__c</fullName>
        <formula>IF( ISBLANK(Desktop_Content_Proxy__c) , &quot;Content not assigned&quot;, HYPERLINK(&quot;/&quot; &amp; Desktop_Content_Proxy__r.ContentDocumentId__c, &quot;Manage&quot;, &quot;_self&quot;))</formula>
        <inlineHelpText>The related Salesforce CRM Content which is holding the static Report.</inlineHelpText>
        <label>Desktop Content</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Favourite_From_Shelf_Tile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Info from which shelf tile report was added to favourites</description>
        <label>Favourite From Shelf Tile</label>
        <referenceTo>OV_Shelf_Tile__c</referenceTo>
        <relationshipName>One_View_Report_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <description>Frequency for when a OneView report is published</description>
        <inlineHelpText>Choose the Frequency for when the OneView report is published</inlineHelpText>
        <label>Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Dynamic</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI-Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yearly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Period</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Function__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Function</label>
        <referenceTo>OV_Function__c</referenceTo>
        <relationshipName>OV_FunctionReports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Geography</label>
        <referenceTo>OV_Geography__c</referenceTo>
        <relationshipName>OV_GeographyReports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Icon__c</fullName>
        <label>Icon</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Icon_ltng__c</fullName>
        <formula>CASE(Icon__c, 
&quot;Briefcase&quot;, &quot;Custom40&quot; , 
&quot;World&quot;, &quot;Custom68&quot;, 
&quot;Tent&quot;, &quot;Custom50&quot;, 
&quot;Table&quot;, &quot;Custom63&quot;, 
&quot;Lorry&quot;, &quot;Custom98&quot;, 
&quot;Motorbike&quot;, &quot;Custom72&quot;, 
&quot;Helicopter&quot;,&quot;Custom72&quot;, 
&quot;Signpost&quot;, &quot;Custom58&quot;, 
&quot;Telescope&quot;, &quot;Custom39&quot;, 
&quot;Factory&quot;, &quot;Custom32&quot;, 
&quot;Custom68&quot;)</formula>
        <label>Icon Lightning</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Content_Proxy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mobile Content Proxy</label>
        <referenceTo>OV_ContentProxy__c</referenceTo>
        <relationshipName>One_View_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mobile_Content__c</fullName>
        <formula>IF( ISBLANK(Mobile_Content_Proxy__c), &quot;Content not assigned&quot;, HYPERLINK(&quot;/&quot; &amp; Mobile_Content_Proxy__r.ContentDocumentId__c, &quot;Manage&quot;, &quot;_self&quot;))</formula>
        <label>Mobile Content</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publisher__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Publisher</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OV_AuthorReports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Report_Folder_Sorting_Field__c</fullName>
        <description>This field is used for sorting purpose only - when sorting with SOQL values are sorted by order defined in picklist field definition</description>
        <formula>TEXT( Report_Folder__c )</formula>
        <label>Report Folder Sorting Field</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Folder__c</fullName>
        <label>Report Folder</label>
        <picklist>
            <picklistValues>
                <fullName>O2C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M2D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P2P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R2R</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USCC/UASSC P2P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USCC/UASSC M2D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USCC/UASSC O2C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USCC/UASSC R2R</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAPL M2D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAPL O2C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAPL P2P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAPL R2R</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash Flow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exposure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Interest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net Debt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAPL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAPL Procurement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAPL UENS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spreads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dressings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Savoury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hair Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oral Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skin Cleansing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skin Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deo &amp; Frag</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Report_Heading_Sorting_Field__c</fullName>
        <description>Formula used for favourite reports sorting</description>
        <formula>IF(TEXT(Report_Heading__c) == &apos;Global&apos;, null, TEXT(Report_Heading__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report Heading Sorting Field</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Heading__c</fullName>
        <description>Headings to Group Report Tiles under when on a Shelf</description>
        <inlineHelpText>Headings to Group Report Tiles under when on a Shelf</inlineHelpText>
        <label>Report Heading</label>
        <picklist>
            <picklistValues>
                <fullName>Cross category</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refreshment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEAA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAMET&amp;RUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Americas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Units</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unilever International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baking,Cooking &amp; Spreads</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reporting_Period__c</fullName>
        <description>Formula field based upon the Value captured in the Frequency and Value Fields on the Report Object.
This value will be displayed on the Report Tile.</description>
        <formula>CASE(TEXT(Frequency__c), 
&quot;Yearly&quot;,    &quot;Year - &quot;   &amp; TEXT(Value__c), 
&quot;Monthly&quot;,   &quot;Month - &quot;  &amp; TEXT(Value__c),
&quot;Quarterly&quot;, &quot;Q&quot;         &amp; LEFT(TEXT(Value__c), 1)  &amp; &quot;-&quot; &amp; RIGHT(TEXT(Value__c), 4)  ,
&quot;BI-Weekly&quot;, &quot;Week - &quot;   &amp; TEXT(Value__c),
&quot;Weekly&quot;,    &quot;Week - &quot;   &amp; TEXT(Value__c),
&quot;Daily&quot;,     LEFT(TEXT(Value__c), 4) &amp; &quot;-&quot; &amp;     
             Left( RIGHT(TEXT(Value__c), 4) ,2) &amp; &quot;-&quot; &amp; 
             RIGHT(TEXT(Value__c), 2) ,
&quot;Other&quot;,     LEFT(TEXT(Value__c), 4) &amp; &quot;-&quot; &amp;     
             Left( RIGHT(TEXT(Value__c), 4) ,2) &amp; &quot;-&quot; &amp; 
             RIGHT(TEXT(Value__c), 2) ,
&quot;Period&quot;,    &quot;P&quot; &amp; RIGHT(TEXT(Value__c), 2) &amp; &quot;-&quot; &amp; LEFT(TEXT(Value__c), 4),
&quot;Dynamic&quot;,   &quot;Dynamic&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Derived value based upon the Frequency and Value Fields on the Report , for display on the Report Tile.</inlineHelpText>
        <label>Reporting Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_on_Devices__c</fullName>
        <description>Determines which devices the report should be listed on. Default to be Desktop.</description>
        <inlineHelpText>Choose the devices you wish the report tile to appear on. If you choose none, the Tile will not appear on any device..</inlineHelpText>
        <label>Show on Devices</label>
        <picklist>
            <picklistValues>
                <fullName>Desktop</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Tablet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Tablet_Content_Proxy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tablet Content Proxy</label>
        <referenceTo>OV_ContentProxy__c</referenceTo>
        <relationshipName>OV_TabletContentProxy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tablet_Content__c</fullName>
        <formula>IF( ISBLANK(Tablet_Content_Proxy__c) , &quot;Content not assigned&quot;, HYPERLINK(&quot;/&quot; &amp; Tablet_Content_Proxy__r.ContentDocumentId__c , &quot;Manage&quot;, &quot;_self&quot;))</formula>
        <label>Tablet Content</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Look-Up Field for the Unit. This is used in the Sort of Report Tiles on a OneView Shelf</inlineHelpText>
        <label>Unit</label>
        <referenceTo>OV_Unit__c</referenceTo>
        <relationshipLabel>One View Report Tiles</relationshipLabel>
        <relationshipName>One_View_Report_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Url__c</fullName>
        <label>Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>Numeric period for Frequency of Publication</description>
        <inlineHelpText>Input the Numeric Value relevant to the Frequency:
Period    = YYYYPP e.g 201501
Yearly     = YYYY    e.g. 2015,
Quarterly = QYYYY e.g. 42015
Monthly   =  MM  e.g. 03
BI-Weekly / Weekly  = WW  e.g. 50
Daily / Other = YYYYMMDD e.g.20151118</inlineHelpText>
        <label>Value</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Views__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Views</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>One View Report Tile</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Show_on_Devices__c</columns>
        <columns>Report_Heading__c</columns>
        <columns>Geography__c</columns>
        <columns>Category__c</columns>
        <columns>Function__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Filters</fullName>
        <columns>NAME</columns>
        <columns>Show_on_Devices__c</columns>
        <columns>Report_Heading__c</columns>
        <columns>Geography__c</columns>
        <columns>Category__c</columns>
        <columns>Function__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>Filter Values</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Folders</fullName>
        <columns>NAME</columns>
        <columns>Report_Folder__c</columns>
        <columns>Report_Heading__c</columns>
        <columns>Geography__c</columns>
        <columns>Category__c</columns>
        <columns>Function__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>Report Folders</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Oneview_Reports</fullName>
        <columns>NAME</columns>
        <columns>Publisher__c</columns>
        <columns>Business_Owner__c</columns>
        <columns>Category__c</columns>
        <columns>Function__c</columns>
        <columns>Geography__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <label>My Oneview Reports</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>QUARTERLY_REPORTS</fullName>
        <columns>NAME</columns>
        <columns>Publisher__c</columns>
        <columns>Business_Owner__c</columns>
        <columns>Desktop_Content_del__c</columns>
        <columns>Category__c</columns>
        <columns>Function__c</columns>
        <columns>Geography__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Frequency__c</field>
            <operation>equals</operation>
            <value>Quarterly</value>
        </filters>
        <label>Quarterly Reports</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Report Tile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>One View Report Tiles</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Frequency_is_Dynamic</fullName>
        <active>true</active>
        <description>Validation for where Frequency is Dynamic the Value is not required</description>
        <errorConditionFormula>ISPICKVAL( Frequency__c , &quot;Dynamic&quot;)
  &amp;&amp;  NOT(ISBLANK(TEXT(Value__c )) )</errorConditionFormula>
        <errorMessage>Frequency is Dynamic. Please remove Value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Value_is_a_Day_Other</fullName>
        <active>true</active>
        <description>Validation for where Frequency is Daily or Other  the Value is  8 digits</description>
        <errorConditionFormula>( ISPICKVAL( Frequency__c , &quot;Daily&quot;)  || 
  ISPICKVAL( Frequency__c , &quot;Other&quot;))

&amp;&amp; ((LEN( TEXT(Value__c )) &lt;&gt; 8 ) 

|| ((VALUE((RIGHT( TEXT(Value__c ) , 2))) &lt; 1 ) 

|| (VALUE((RIGHT( TEXT(Value__c ) , 2))) &gt; 31 )
|| (VALUE(  LEFT((RIGHT( TEXT(Value__c ) , 4)),2)) &gt; 12 )
|| (VALUE(  LEFT((RIGHT( TEXT(Value__c ) , 4)),2)) &lt; 01 ) )

)</errorConditionFormula>
        <errorMessage>Frequency is Daily or Other. Please enter an 8 digit Date in the following format YYYYMMDD e.g. 20151118 = 2015-11-18
Values: Month 01  - 12 , Day 01 -31</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Value_is_a_Month</fullName>
        <active>true</active>
        <description>Validation for where Frequency is Monthly the Value is in range  1 - 12</description>
        <errorConditionFormula>( ISPICKVAL( Frequency__c , &quot;Monthly&quot;)
  &amp;&amp; ISBLANK(TEXT(Value__c )) )
 || 
( ISPICKVAL( Frequency__c , &quot;Monthly&quot;)
  &amp;&amp; ((LEN( TEXT(Value__c ))   &gt;  2 )
  ||   ABS(Value__c)  &lt;   1 
  ||    ABS(Value__c)  &gt;   12 ))</errorConditionFormula>
        <errorMessage>Frequency is Monthly. Please enter a 2 digit Month value between 1 and 12</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Value_is_a_Period</fullName>
        <active>true</active>
        <description>Ensure the Value field is a Period and Year where the Frequency is set to Period</description>
        <errorConditionFormula>ISPICKVAL( Frequency__c , &quot;Period&quot;) 

  &amp;&amp; ((LEN( TEXT(Value__c ))  &lt;&gt; 6 )

 ||   ((VALUE((RIGHT( TEXT(Value__c ) , 2))) &lt; 1 )

 ||   (VALUE((RIGHT( TEXT(Value__c ) , 2))) &gt; 13 ))

)</errorConditionFormula>
        <errorMessage>Frequency is Period. Please enter a 4 digit Year and 2 digit Period e.g. 201513.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Value_is_a_Quarter</fullName>
        <active>true</active>
        <description>Validation for where Frequency is Quarterly the Value is in range  1 - 4 + Year</description>
        <errorConditionFormula>( ISPICKVAL( Frequency__c , &quot;Quarterly&quot;)
  &amp;&amp; ISBLANK(TEXT(Value__c )) )
 || 

(ISPICKVAL( Frequency__c , &quot;Quarterly&quot;)
  &amp;&amp; ((LEN( TEXT(Value__c ))   &lt;  5 )
  ||   VALUE( LEFT(TEXT(Value__c ), 1) )  &lt;   1 
 ||    VALUE( LEFT(TEXT(Value__c ), 1) )  &gt;   4 ))</errorConditionFormula>
        <errorMessage>Frequency is Quarterly. Please enter a 1 digit value for Quarter between 1 and 4, and 4 digit value for Year.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Value_is_a_Week</fullName>
        <active>true</active>
        <description>Validation for where Frequency is Weekly or BI Weekly the Value is in range  1 - 52</description>
        <errorConditionFormula>(( ISPICKVAL( Frequency__c , &quot;Weekly&quot;)  || 
   ISPICKVAL( Frequency__c , &quot;BI-Weekly&quot;) )
  &amp;&amp; ((LEN( TEXT(Value__c ))   &lt;  1 )))

 || 

(( ISPICKVAL( Frequency__c , &quot;Weekly&quot;)  || 
   ISPICKVAL( Frequency__c , &quot;BI-Weekly&quot;) )
  &amp;&amp; ((LEN( TEXT(Value__c ))   &gt;  2 )
  ||   ABS(Value__c)  &lt;   1 
  ||    ABS(Value__c)  &gt;   52 ))</errorConditionFormula>
        <errorMessage>Frequency is Weekly/BI-Weekly. Please enter a 2 digit Week value between 1 and 52</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Value_is_a_Year</fullName>
        <active>true</active>
        <description>Ensure the Value field is a Year where the Frequency is set to Yearly</description>
        <errorConditionFormula>ISPICKVAL( Frequency__c , &quot;Yearly&quot;) 

  &amp;&amp; ((LEN( TEXT(Value__c ))  &lt;&gt; 4 )
  ||   (ABS(Value__c)  &lt;   (YEAR( TODAY())-5 )
  ||   ABS(Value__c)  &gt;    (YEAR( TODAY())+1 )))</errorConditionFormula>
        <errorMessage>Frequency is Yearly. Please enter a 4 digit Year e.g. 2015.</errorMessage>
    </validationRules>
</CustomObject>